--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Azure Cosmos DB MongoDB dependencies -->
+    <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-cosmos</artifactId>
+        <version>4.18.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-sync</artifactId>
+        <version>4.3.1</version>
+    </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
